MusicSite/HTML/styles.css
* {
    box-sizing: border-box;
}


/* Clear fix hack */

.clearfix:after {
    content: ".";
    display: block;
    clear: both;
    visibility: hidden;
    line-height: 0;
    height: 0;
}

.clear {
    clear: both;
}


/******************************************
/* BASE STYLES
/*******************************************/

* {
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Bebas Neue', cursive, Arial;
    background-color: rgba(106, 196, 181, 0.196);
    margin: 0%;
    max-width: 0 auto;
}

h1 {
    font-size: 48px;
    color: rgba(5, 12, 43, 0.459);
    font-weight: 600;
    letter-spacing: 3px;
}

h2 {
    font-size: 36px;
    color: rgba(5, 12, 43, 0.459);
    font-weight: 600;
    letter-spacing: 3px;
}

p {
    font-size: 20px;
    color: rgba(5, 12, 43, 0.459);
    padding-left: 20px;
}

a {
    font-size: 30px;
    text-decoration: none;
}

a:hover {
    color: lightskyblue;
}

a::after {
    color: black;
}


/******************************************
/* LAYOUT
/*******************************************/

header {
    background: linear-gradient( rgba(144, 238, 144, 0.196), rgba(144, 238, 144, 0.196));
}

footer {
    background-color: rgba(144, 238, 144, 0.196);
    height: 200px;
}

.navbar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.navitems {
    display: flex;
    list-style-type: none;
    padding-inline-end: 20px;
}

.navitems a {
    border: 1px rgba(135, 206, 250, 0.418) solid;
    padding: 10px 20px 10px 20px;
    background-color: rgba(255, 255, 255, 0.521);
    color: rgba(5, 12, 43, 0.459)
}

.navitems a:hover {
    color: gray;
}

.logo {
    font-size: 60px;
    color: rgba(54, 73, 156, 0.459);
    font-weight: 600;
    letter-spacing: 10px;
    display: flex;
    padding-left: 20px;
}

.releases {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    height: 600px;
    border: 3px rgba(255, 255, 255, 0.719) solid;
    margin: auto 0;
}

.releaseitems {
    display: flex;
    align-items: center;
}

.dissect {
    display: flex;
    justify-content: center;

}

.dissecttrackname{
    font-size: 28px;
    color: rgba(0, 0, 0, 0.459);
    font-weight: 600;
    letter-spacing: 3px;
    padding: 50px 0;
    text-align: left;
}

.dissectitems {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1;
}

.title {
    display: flex;
    align-items: center;
    height: 50px;
    border-top: 3px rgba(255, 255, 255, 0.719) solid;
    padding-left: 20px;
    margin-top: 20px;
}


/******************************************
/* ADDITIONAL STYLES
/*******************************************/

.releases img {
    width: 500px;
    padding: 0px 20px;
}

